--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-minima
 title: Statistical Models in Biology
 description: Course Website
 show_downloads: false
