--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
 theme: minima
+plugins:
+  - jekyll-titles-from-headings
+  
+titles_from_headings:
+  enabled:     true
+  strip_title: true
+  collections: false
